fix #25 : 카카오톡 전처리 구현 수정